# bobcode-harness

./: .gitignore  LICENSE  README.md  agent-harness-spec.md  pyproject.toml  requirements.txt
apps/orchestrator/: budget.py  cli.py  main.py  task_router.py
apps/orchestrator/agents/: planner.py  reviewer.py  worker.py
apps/orchestrator/stages/: execute.py  intake.py  learn.py  plan.py  review_pipeline.py  validate.py
config/: eval_config.yaml  harness.yaml  harness.yaml.example  marketing_servers.yaml  model_routing.yaml
docs/: STATUS.md  browser_daemon_v1_spec.md
evals/adversarial/: red_team.yaml
evals/marketing/: test_creative_scoring.yaml  test_customer_segmentation.yaml  test_performance_report.yaml  test_seo_content.yaml  test_social_campaign.yaml
evals/regressions/: test_review_diff.yaml  test_safe_refactor.yaml
prompts/planner/: identity.md  output_contract.json  policy.md  procedure.md
prompts/reviewer/: identity.md  output_contract.json  policy.md  procedure.md
prompts/worker/: identity.md  output_contract.json  policy.md  procedure.md
scripts/: backup.sh  deploy.sh  harden.sh  setup.sh
skills/code/: bug_trace.v1.md  review_diff.v1.md  safe_refactor.v1.md
skills/gstack/: README.md
skills/marketing/: creative_scoring.v1.md  customer_segmentation.v1.md  performance_report.v1.md  seo_content.v1.md  social_campaign.v1.md
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_browser_agent_tools.py  test_browser_daemon_client.py  test_browser_runtime_paths.py  test_budget.py  test_cli_register_helpers.py  test_codegraph_manager.py  test_community_exchange.py  test_deterministic_eval.py  test_learning_feedback.py  test_llm_router.py  test_runtime_paths.py  test_sqlite_store.py  test_task_state.py  test_telegram_bot_runtime.py
tools/browser-daemon/: package.json
tools/browser-daemon/src/: server.js
