[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-harness"
version = "1.0.0"
description = "An agent orchestration harness for multi-model AI workflows"
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-telegram-bot",
    "arize-phoenix",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "kuzu",
    "pyyaml",
    "pydantic",
    "httpx",
    "aiohttp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[project.scripts]
harness-ctl = "apps.orchestrator.cli:main"

[project.entry-points."apps.orchestrator"]
main = "apps.orchestrator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.hatch.build.targets.sdist]
include = [
    "/apps",
    "/packages",
    "/config",
    "/evals",
    "/prompts",
    "/scripts",
    "/skills",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
